force-app/main/default/objects/BrandStyles__c/BrandStyles__c.object-meta.xml
<CustomObject>
    <description>Where OEM colors. logos, paddings, etc for Email Templates is stored</description>
    <label>Brand Style</label>
    <nameField>
        <displayFormat>BSTYL{0000}</displayFormat>
        <label>Branding Styles Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Styles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>