force-app/main/default/objects/BrandStyles__c/fields/body_copy_align__c.field-meta.xml
<CustomField>
    <fullName>body_copy_align__c</fullName>
    <description>text-align</description>
    <inlineHelpText>Horizontal alignment of the text for a body copy</inlineHelpText>
    <label>Body Copy Alignment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>