force-app/main/default/objects/BrandStyles__c/fields/body_copy_color__c.field-meta.xml
<CustomField>
    <fullName>body_copy_color__c</fullName>
    <description>color</description>
    <inlineHelpText>Font color of the text for a body copy</inlineHelpText>
    <label>Body Copy Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>