force-app/main/default/objects/BrandStyles__c/fields/body_copy_size__c.field-meta.xml
<CustomField>
    <fullName>body_copy_size__c</fullName>
    <description>font-size</description>
    <inlineHelpText>Font size of the text for a body copy</inlineHelpText>
    <label>Body Copy Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>