force-app/main/default/objects/BrandStyles__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Brand this styling is defined for</inlineHelpText>
    <label>Brand</label>
    <referenceTo>Brands__c</referenceTo>
    <relationshipName>Brand_Styling</relationshipName>
    <type>Lookup</type>
</CustomField>