force-app/main/default/objects/BrandStyles__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <formula>Brand__r.BrandName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Name</label>
    <type>Text</type>
</CustomField>