force-app/main/default/objects/BrandStyles__c/fields/button_font_size__c.field-meta.xml
<CustomField>
    <fullName>button_font_size__c</fullName>
    <inlineHelpText>Font size of the text for a button</inlineHelpText>
    <label>Button Font Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>