force-app/main/default/objects/BrandStyles__c/fields/campaign_bg_bottom__c.field-meta.xml
<CustomField>
    <fullName>campaign_bg_bottom__c</fullName>
    <description>background-color</description>
    <inlineHelpText>Background color of the body, also is the background color of the sales event and warranty logo blocks</inlineHelpText>
    <label>Campaign Bottom Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>