force-app/main/default/objects/BrandStyles__c/fields/campaign_bg_top__c.field-meta.xml
<CustomField>
    <fullName>campaign_bg_top__c</fullName>
    <inlineHelpText>Background color of the preheader</inlineHelpText>
    <label>Campaign Top Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>