force-app/main/default/objects/BrandStyles__c/fields/CampaignWidth__c.field-meta.xml
<CustomField>
    <fullName>CampaignWidth__c</fullName>
    <inlineHelpText>Overall width of the email</inlineHelpText>
    <label>Campaign Width</label>
    <length>10</length>
    <type>Text</type>
</CustomField>