force-app/main/default/objects/BrandStyles__c/fields/content_align__c.field-meta.xml
<CustomField>
    <fullName>content_align__c</fullName>
    <inlineHelpText>Overall horizontal alignment of the email</inlineHelpText>
    <label>Content Alignment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>