force-app/main/default/objects/BrandStyles__c/fields/content_bg_color__c.field-meta.xml
<CustomField>
    <fullName>content_bg_color__c</fullName>
    <inlineHelpText>Overall background color of the email</inlineHelpText>
    <label>Content Background Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>