force-app/main/default/objects/BrandStyles__c/fields/content_padding__c.field-meta.xml
<CustomField>
    <fullName>content_padding__c</fullName>
    <description>padding</description>
    <inlineHelpText>Whitespace padding around each block</inlineHelpText>
    <label>Content Padding</label>
    <length>50</length>
    <type>Text</type>
</CustomField>