force-app/main/default/objects/BrandStyles__c/fields/coupon_container_bg_color__c.field-meta.xml
<CustomField>
    <fullName>coupon_container_bg_color__c</fullName>
    <description>background</description>
    <inlineHelpText>Background color for a coupon</inlineHelpText>
    <label>Coupon Container Background Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>