force-app/main/default/objects/BrandStyles__c/fields/coupon_container_border_bottom__c.field-meta.xml
<CustomField>
    <fullName>coupon_container_border_bottom__c</fullName>
    <description>border-bottom</description>
    <label>Coupon Container Border Bottom</label>
    <length>50</length>
    <type>Text</type>
</CustomField>