force-app/main/default/objects/BrandStyles__c/fields/coupon_container_border_radius__c.field-meta.xml
<CustomField>
    <fullName>coupon_container_border_radius__c</fullName>
    <label>Coupon Container Border Radius</label>
    <length>50</length>
    <type>Text</type>
</CustomField>