force-app/main/default/objects/BrandStyles__c/fields/coupon_container_border_right__c.field-meta.xml
<CustomField>
    <fullName>coupon_container_border_right__c</fullName>
    <label>Coupon Container Border Right</label>
    <length>50</length>
    <type>Text</type>
</CustomField>