force-app/main/default/objects/BrandStyles__c/fields/coupon_container_border_top__c.field-meta.xml
<CustomField>
    <fullName>coupon_container_border_top__c</fullName>
    <label>Coupon Container Border Top</label>
    <length>50</length>
    <type>Text</type>
</CustomField>