force-app/main/default/objects/BrandStyles__c/fields/coupon_container_box_shadow__c.field-meta.xml
<CustomField>
    <fullName>coupon_container_box_shadow__c</fullName>
    <label>Coupon Container Box Shadow</label>
    <length>50</length>
    <type>Text</type>
</CustomField>