force-app/main/default/objects/BrandStyles__c/fields/coupon_detail_case__c.field-meta.xml
<CustomField>
    <fullName>coupon_detail_case__c</fullName>
    <description>text-transform</description>
    <inlineHelpText>Text transformation for the detail text for a coupon</inlineHelpText>
    <label>Coupon Detail Case</label>
    <length>50</length>
    <type>Text</type>
</CustomField>