force-app/main/default/objects/BrandStyles__c/fields/coupon_detail_color__c.field-meta.xml
<CustomField>
    <fullName>coupon_detail_color__c</fullName>
    <label>Coupon Detail Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>