force-app/main/default/objects/BrandStyles__c/fields/coupon_disclaimer_color__c.field-meta.xml
<CustomField>
    <fullName>coupon_disclaimer_color__c</fullName>
    <inlineHelpText>Color of the font for a coupon disclaimer</inlineHelpText>
    <label>Coupon Disclaimer Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>