force-app/main/default/objects/BrandStyles__c/fields/coupon_logo_alt__c.field-meta.xml
<CustomField>
    <fullName>coupon_logo_alt__c</fullName>
    <label>Coupon Logo Alt</label>
    <length>50</length>
    <type>Text</type>
</CustomField>