force-app/main/default/objects/BrandStyles__c/fields/coupon_logo_src__c.field-meta.xml
<CustomField>
    <fullName>coupon_logo_src__c</fullName>
    <description>img src</description>
    <inlineHelpText>Link to the image for a coupon</inlineHelpText>
    <label>Coupon Logo Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>