force-app/main/default/objects/BrandStyles__c/fields/coupon_redeem_offer_case__c.field-meta.xml
<CustomField>
    <fullName>coupon_redeem_offer_case__c</fullName>
    <label>Coupon Redeem Offer Case</label>
    <length>50</length>
    <type>Text</type>
</CustomField>