force-app/main/default/objects/BrandStyles__c/fields/coupon_redeem_offer_weight__c.field-meta.xml
<CustomField>
    <fullName>coupon_redeem_offer_weight__c</fullName>
    <description>font-weight</description>
    <label>Coupon Redeem Offer Weight</label>
    <length>50</length>
    <type>Text</type>
</CustomField>