force-app/main/default/objects/BrandStyles__c/fields/coupon_title_case__c.field-meta.xml
<CustomField>
    <fullName>coupon_title_case__c</fullName>
    <label>Coupon Title Case</label>
    <length>100</length>
    <type>Text</type>
</CustomField>