force-app/main/default/objects/BrandStyles__c/fields/coupon_title_color__c.field-meta.xml
<CustomField>
    <fullName>coupon_title_color__c</fullName>
    <label>Coupon Title Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>