force-app/main/default/objects/BrandStyles__c/fields/coupon_title_font_weight__c.field-meta.xml
<CustomField>
    <fullName>coupon_title_font_weight__c</fullName>
    <label>Coupon Title Font Weight</label>
    <length>50</length>
    <type>Text</type>
</CustomField>