force-app/main/default/objects/BrandStyles__c/fields/emailFooter__c.field-meta.xml
<CustomField>
    <fullName>emailFooter__c</fullName>
    <inlineHelpText>For Cadillac and Kia, indicates whether to include additional content in the footer</inlineHelpText>
    <label>Email Footer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>