force-app/main/default/objects/BrandStyles__c/fields/emailHeader__c.field-meta.xml
<CustomField>
    <fullName>emailHeader__c</fullName>
    <inlineHelpText>For Cadillac and Kia, indicates whether to include additional content in the header</inlineHelpText>
    <label>Email Header</label>
    <length>50</length>
    <type>Text</type>
</CustomField>