force-app/main/default/objects/BrandStyles__c/fields/font_family__c.field-meta.xml
<CustomField>
    <fullName>font_family__c</fullName>
    <inlineHelpText>Default font for the entire email</inlineHelpText>
    <label>Font Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>