force-app/main/default/objects/BrandStyles__c/fields/footer_bg__c.field-meta.xml
<CustomField>
    <fullName>footer_bg__c</fullName>
    <description>background-color</description>
    <inlineHelpText>Background color of the footer</inlineHelpText>
    <label>Footer Background</label>
    <length>50</length>
    <type>Text</type>
</CustomField>