force-app/main/default/objects/BrandStyles__c/fields/footer_logo1_alt__c.field-meta.xml
<CustomField>
    <fullName>footer_logo1_alt__c</fullName>
    <label>Footer Logo1 Alt Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>