force-app/main/default/objects/BrandStyles__c/fields/footer_logo1_src__c.field-meta.xml
<CustomField>
    <fullName>footer_logo1_src__c</fullName>
    <inlineHelpText>Link to brand-specific image for the footer</inlineHelpText>
    <label>Footer Logo 1 Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>