force-app/main/default/objects/BrandStyles__c/fields/footer_logo2_src__c.field-meta.xml
<CustomField>
    <fullName>footer_logo2_src__c</fullName>
    <inlineHelpText>Used for FCA emails</inlineHelpText>
    <label>Footer Logo 2 Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>