force-app/main/default/objects/BrandStyles__c/fields/footer_padding__c.field-meta.xml
<CustomField>
    <fullName>footer_padding__c</fullName>
    <label>Footer Padding</label>
    <length>50</length>
    <type>Text</type>
</CustomField>