force-app/main/default/objects/BrandStyles__c/fields/footer_text_case__c.field-meta.xml
<CustomField>
    <fullName>footer_text_case__c</fullName>
    <label>Footer Text Case</label>
    <length>100</length>
    <type>Text</type>
</CustomField>