force-app/main/default/objects/BrandStyles__c/fields/footer_text_color__c.field-meta.xml
<CustomField>
    <fullName>footer_text_color__c</fullName>
    <label>Footer Text Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>