force-app/main/default/objects/BrandStyles__c/fields/footer_three_icon_store_src__c.field-meta.xml
<CustomField>
    <fullName>footer_three_icon_store_src__c</fullName>
    <label>Footer Three Icon Store Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>