force-app/main/default/objects/BrandStyles__c/fields/footer_three_icon_text_color__c.field-meta.xml
<CustomField>
    <fullName>footer_three_icon_text_color__c</fullName>
    <label>Footer Three Icon Text Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>