force-app/main/default/objects/BrandStyles__c/fields/footer_three_icon_text_letter_spacing__c.field-meta.xml
<CustomField>
    <fullName>footer_three_icon_text_letter_spacing__c</fullName>
    <label>Footer Three Icon Text Letter Spacing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>