force-app/main/default/objects/BrandStyles__c/fields/header_bg__c.field-meta.xml
<CustomField>
    <fullName>header_bg__c</fullName>
    <description>bgcolor</description>
    <inlineHelpText>Background color of the header</inlineHelpText>
    <label>Header Background Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>