force-app/main/default/objects/BrandStyles__c/fields/header_bottom_border__c.field-meta.xml
<CustomField>
    <fullName>header_bottom_border__c</fullName>
    <label>Header Bottom Border</label>
    <length>50</length>
    <type>Text</type>
</CustomField>