force-app/main/default/objects/BrandStyles__c/fields/header_padding__c.field-meta.xml
<CustomField>
    <fullName>header_padding__c</fullName>
    <label>Header Padding</label>
    <length>50</length>
    <type>Text</type>
</CustomField>