force-app/main/default/objects/BrandStyles__c/fields/header_text_color__c.field-meta.xml
<CustomField>
    <fullName>header_text_color__c</fullName>
    <label>Header Text Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>