force-app/main/default/objects/BrandStyles__c/fields/header_text_size__c.field-meta.xml
<CustomField>
    <fullName>header_text_size__c</fullName>
    <label>Header Text Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>