force-app/main/default/objects/BrandStyles__c/fields/headline_size__c.field-meta.xml
<CustomField>
    <fullName>headline_size__c</fullName>
    <description>font-size</description>
    <inlineHelpText>Font size for a headline</inlineHelpText>
    <label>Headline Font Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>