force-app/main/default/objects/BrandStyles__c/fields/landing_page_hero__c.field-meta.xml
<CustomField>
    <fullName>landing_page_hero__c</fullName>
    <inlineHelpText>Link to the image for the landing page hero</inlineHelpText>
    <label>Landing Page Hero Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>