force-app/main/default/objects/BrandStyles__c/fields/landing_page_hero_alt__c.field-meta.xml
<CustomField>
    <fullName>landing_page_hero_alt__c</fullName>
    <label>Landing Page Hero Alt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>