force-app/main/default/objects/BrandStyles__c/fields/logo_alt__c.field-meta.xml
<CustomField>
    <fullName>logo_alt__c</fullName>
    <label>Logo Alt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>