force-app/main/default/objects/BrandStyles__c/fields/logo_src__c.field-meta.xml
<CustomField>
    <fullName>logo_src__c</fullName>
    <label>Logo Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>