force-app/main/default/objects/BrandStyles__c/fields/map_src__c.field-meta.xml
<CustomField>
    <fullName>map_src__c</fullName>
    <inlineHelpText>Link to the image of a map pin</inlineHelpText>
    <label>Map Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>