force-app/main/default/objects/BrandStyles__c/fields/oem_lineup_alt__c.field-meta.xml
<CustomField>
    <fullName>oem_lineup_alt__c</fullName>
    <label>OEM Lineup Alt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>