force-app/main/default/objects/BrandStyles__c/fields/oem_lineup_src__c.field-meta.xml
<CustomField>
    <fullName>oem_lineup_src__c</fullName>
    <inlineHelpText>Link to the image for all makes for the brand</inlineHelpText>
    <label>OEM Lineup Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>