force-app/main/default/objects/BrandStyles__c/fields/oem_name__c.field-meta.xml
<CustomField>
    <fullName>oem_name__c</fullName>
    <inlineHelpText>Unused</inlineHelpText>
    <label>OEM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>