force-app/main/default/objects/BrandStyles__c/fields/phone_src__c.field-meta.xml
<CustomField>
    <fullName>phone_src__c</fullName>
    <inlineHelpText>Link to the image of a phone headset</inlineHelpText>
    <label>Phone Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>