force-app/main/default/objects/BrandStyles__c/fields/preheader_color__c.field-meta.xml
<CustomField>
    <fullName>preheader_color__c</fullName>
    <description>Color</description>
    <inlineHelpText>Color of the preheader</inlineHelpText>
    <label>Preheader Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>