force-app/main/default/objects/BrandStyles__c/fields/sales_event_logo_alt__c.field-meta.xml
<CustomField>
    <fullName>sales_event_logo_alt__c</fullName>
    <label>sales_event_logo_alt</label>
    <length>20</length>
    <type>Text</type>
</CustomField>