force-app/main/default/objects/BrandStyles__c/fields/sales_event_logo_bg_color__c.field-meta.xml
<CustomField>
    <fullName>sales_event_logo_bg_color__c</fullName>
    <inlineHelpText>Background color of the sales event item</inlineHelpText>
    <label>sales_event_logo_bg_color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>