force-app/main/default/objects/BrandStyles__c/fields/secondary_button_box_shadow__c.field-meta.xml
<CustomField>
    <fullName>secondary_button_box_shadow__c</fullName>
    <label>secondary_button_box_shadow</label>
    <length>20</length>
    <type>Text</type>
</CustomField>