force-app/main/default/objects/BrandStyles__c/fields/secondary_button_text_color__c.field-meta.xml
<CustomField>
    <fullName>secondary_button_text_color__c</fullName>
    <label>secondary_button_text_color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>