force-app/main/default/objects/BrandStyles__c/fields/service_event_logo_alt__c.field-meta.xml
<CustomField>
    <fullName>service_event_logo_alt__c</fullName>
    <label>service_event_logo_alt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>