force-app/main/default/objects/BrandStyles__c/fields/service_event_logo_bg_color__c.field-meta.xml
<CustomField>
    <fullName>service_event_logo_bg_color__c</fullName>
    <label>service_event_logo_bg_color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>