force-app/main/default/objects/BrandStyles__c/fields/subhead_align__c.field-meta.xml
<CustomField>
    <fullName>subhead_align__c</fullName>
    <label>subhead_align</label>
    <length>20</length>
    <type>Text</type>
</CustomField>