force-app/main/default/objects/BrandStyles__c/fields/subhead_case__c.field-meta.xml
<CustomField>
    <fullName>subhead_case__c</fullName>
    <label>subhead_case</label>
    <length>20</length>
    <type>Text</type>
</CustomField>