force-app/main/default/objects/BrandStyles__c/fields/subhead_color__c.field-meta.xml
<CustomField>
    <fullName>subhead_color__c</fullName>
    <label>subhead_color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>