force-app/main/default/objects/BrandStyles__c/fields/subhead_letter_spacing__c.field-meta.xml
<CustomField>
    <fullName>subhead_letter_spacing__c</fullName>
    <label>subhead_letter_spacing</label>
    <length>20</length>
    <type>Text</type>
</CustomField>