force-app/main/default/objects/BrandStyles__c/fields/subhead_recall_bg_color__c.field-meta.xml
<CustomField>
    <fullName>subhead_recall_bg_color__c</fullName>
    <label>subhead_recall_bg_color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>