force-app/main/default/objects/BrandStyles__c/fields/subhead_size__c.field-meta.xml
<CustomField>
    <fullName>subhead_size__c</fullName>
    <label>subhead_size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>