force-app/main/default/objects/BrandStyles__c/fields/subhead_weight__c.field-meta.xml
<CustomField>
    <fullName>subhead_weight__c</fullName>
    <label>subhead_weight</label>
    <length>20</length>
    <type>Text</type>
</CustomField>