force-app/main/default/objects/BrandStyles__c/fields/text_incentive_color__c.field-meta.xml
<CustomField>
    <fullName>text_incentive_color__c</fullName>
    <label>text_incentive_color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>