force-app/main/default/objects/BrandStyles__c/fields/warranty_logo_bg__c.field-meta.xml
<CustomField>
    <fullName>warranty_logo_bg__c</fullName>
    <label>warranty_logo_bg</label>
    <length>20</length>
    <type>Text</type>
</CustomField>