force-app/main/default/objects/BrandStyles__c/fields/warranty_logo_text__c.field-meta.xml
<CustomField>
    <fullName>warranty_logo_text__c</fullName>
    <label>warranty_logo_text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>