force-app/main/default/objects/BrandStyles__c/fields/web_icon_src__c.field-meta.xml
<CustomField>
    <fullName>web_icon_src__c</fullName>
    <label>Web Icon Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>